added negation and templates